# holistic-aggregates-paper

./: .gitignore  CODEOWNERS  LICENSE.txt  README.md
evaluation/: HolisticPercentile.twbx  compute_tree_structure.py  lineitems_20k.csv  measure_competitors.py  measure_datasizes.py  measure_monotonic.py  measure_monotonic_ost.py  measure_nonmonotonic.py  perf.sh  utils.py
evaluation/ost-percentile/: CMakeLists.txt  main.cpp  tree234.h
results/: countd_tree_sf10_phases.twbx  evaluation.twb  results_competitors.csv  results_datasizes.csv  results_monotonic.csv  results_nonmonotonic.csv  scalability_results1.csv  scalability_results2.csv
standalone-implementation/: CMakeLists.txt  aggregatedistinct.hpp  bench.cpp  data.hpp  framebounds.hpp  losertree.hpp  mergesorttree.hpp  output.hpp  percentile.hpp  rank.hpp  scalability_bench.cpp
standalone-implementation/test/: aggregatedistinct.cpp  losertree.cpp  mergesorttree.cpp  percentile.cpp  rank.cpp
